--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pushprotocol/restapi": "^1.6.8",
+    "@pushprotocol/socket": "^0.5.3",
+    "@rainbow-me/rainbowkit": "^2.0.1",
+    "@tanstack/react-query": "^5.24.1",
+    "ethers": "^5.7.2",
     "init": "^0.1.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "viem": "^2.7.14",
+    "wagmi": "^2.5.7"
   },
   "devDependencies": {
     "@types/node": "^20",
