--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
