--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-google-maps/api": "^2.19.3",
     "@tanstack/react-query": "^5.24.1",
     "ethers": "^5.7.2",
+    "firebase": "^10.8.0",
+    "firebase-admin": "^12.0.0",
     "init": "^0.1.2",
     "next": "14.1.0",
     "react": "^18",
