--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@rainbow-me/rainbowkit": "^2.0.1",
     "@react-google-maps/api": "^2.19.3",
     "@tanstack/react-query": "^5.24.1",
+    "@thirdweb-dev/auth": "^4.1.33",
+    "@thirdweb-dev/react": "^4.4.9",
     "ethers": "^5.7.2",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
