--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@pushprotocol/restapi": "^1.6.8",
     "@pushprotocol/socket": "^0.5.3",
-    "@rainbow-me/rainbowkit": "^2.0.1",
     "@react-google-maps/api": "^2.19.3",
     "@tanstack/react-query": "^5.24.1",
     "@thirdweb-dev/auth": "^4.1.33",
@@ -24,8 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.22.1",
-    "viem": "^2.7.14",
-    "wagmi": "^2.5.7"
+    "viem": "^2.7.14"
   },
   "devDependencies": {
     "@types/node": "^20",
